--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-    <script src="https://kit.fontawesome.com/12c68f3a6c.js" crossorigin="anonymous" defer></script>
-
     <link href="styles.css" rel="stylesheet">
 
 
@@ -39,11 +37,10 @@
 
     <div class="hero-all-about-matcha">
 
-        <div class="mirror-content">
-            <h1 class="wor
-            k-logo">All About Matcha</h1>
-            <img class="mirror-image" src="matcha-img/Mock up.png" alt="Mirror e-commerce website">
-        </div>
+
+        <h1 class="work-logo">All About Matcha</h1>
+        <img class="mirror-image" src="matcha-img/Matcha mock up.png" alt="All about matcha responsive website mock up screens">
+
 
 
     </div>
@@ -64,7 +61,7 @@
 
             <div>
                 <li>Design a hi-fidelity, responsive e-commerce website with virtual tea ceremony class bookings.</li>
-                <li>Design a logo and establish brand identiy for the website.</li>
+                <li>Design a logo and establish brand identify for the website.</li>
             </div>
 
             <div class="objectives">
@@ -78,6 +75,12 @@
                     <p>Tools:</p> Figma, Miro, Whimsical, Maze
                 </div>
             </div>
+
+            <p>Challenges</p>
+            <li>Majority of people have no idea what to bring to Japanese Tea Ceremony, or what it's all about.</li>
+            <li>Japanese Tea Ceremony sounds too intimidating and has strict manners.</li>
+
+
         </div>
 
     </div>
@@ -100,9 +103,11 @@
         matcha.
         I learned that a) matcha consumption is increasing as a superfood and b) the majority of people associate
         matcha with ice cream, desserts, or lattes.
+        I also picked competitors who do tea ceremony lessons either online or in-person to see how they set up their
+        booking process.
 
 
-        <img class="mirror-content" src="matcha-img/Competitive Analysis.jpg" alt="Competitive Analysis">
+        <img class="mirror-content2" src="matcha-img/Competitive Analysis.jpg" alt="Competitive Analysis">
 
 
 
@@ -111,13 +116,14 @@
         <p>Survey</p>
 
         I conducted a survey to get overall impressions about matcha and Japanese Tea Ceremony.
-        As I learned how people perceive matcha in competitive analysis, the majority of participants associated it with forms of desserts and drinks.
+        As I learned how people perceive matcha in competitive analysis, the majority of participants associated it with
+        forms of desserts and drinks.
         For Japanese Tea Ceremony, I made an assumption that people associate it with strict manners and
         a sophisticated atmosphere, so I wanted to get quantitative results from the survey.
         My assumption was fairly correct, while a few people said that it would be a relaxing and peaceful experience.
 
 
-        <img class="mirror-content" src="matcha-img/Matcha survey.png" alt="Competitive analysis">
+        <img class="mirror-content2" src="matcha-img/Survey.jpg" alt="Survey 2 charts">
 
 
         <p>1:1 User Interviews</p>
@@ -126,9 +132,11 @@
         However, a few participants (those who have lived in Japan before) said they would like to learn about and
         get better at it.
         I decided to target those who would seek it out when they get the chance, since they represent the majority
-        of potential users in the US.
+        of potential users in the US.<br><br>
 
-        <img class="mirror-content" src="matcha-img/Research.png" alt="Competitive analysis">
+        Here are the major needs/pain points I got from the user interviews.
+
+        <img class="mirror-content2" src="matcha-img/interview summary.jpg" alt="Interview summary">
 
 
 
@@ -158,7 +166,7 @@
         that liking matcha doesn’t mean they would attend a class to get better at making matcha, but to learn
         about a
         new culture and new things.
-        <img class="mirror-content" src="matcha-img/Persona.jpg" alt="Persona, Jessica Wong">
+        <img class="mirror-content2" src="matcha-img/Persona.jpg" alt="Persona, Jessica Wong">
 
 
         <p>User Flow</p>
@@ -170,7 +178,7 @@
         That way, I can understand how I can make it so that users will be able to complete a task without any
         frustrations.
 
-        <img class="mirror-content" src="matcha-img/Matcha User Flow.png" alt="User Flow">
+        <img class="mirror-content2" src="matcha-img/User flow.jpg" alt="User Flow">
 
 
     </div>
@@ -185,44 +193,40 @@
 
     <div class="content mirror-body">
 
-        <p>Mid-Fidelity Responsive Wireframes</p>
+        <p>Mid-Fidelity Wireframes</p>
         I started making low-fidelity wireframes with a lot of ideas of what I wanted to include. I
         focused on having two things on the website: matcha e-commerce and booking online Japanese Tea Ceremony
         classes, since this is what the business does. I learned through my research that people don’t always
         associate matcha as a drink, and they don’t know much about Japanese Tea Ceremony. I
         wanted to also include information about matcha and Japanese Tea Ceremony so that the users can learn
         about them.
-        <img class="mirror-content" src="matcha-img/Responsive wireframes.jpg" alt="Responsive wireframes">
 
-
-        <p>Wire Flows</p>
         <a href=#img-wireframes class="lightbox-link">
-            <img class="mirror-content" src="matcha-img/Wireflows.png" alt="Mirror, low-fi wireframes">
+            <img class="mirror-content2" src="matcha-img/Wireflows.png" alt="Mirror, low-fi wireframes">
         </a>
 
         <a href="#!" class="lightbox" id="img-wireframes">
             <span style="background-image: url('matcha-img/Wireflows.png')"></span>
         </a>
-
-
+        I had a lot of different pieces of information at first that made the main page look cluttered. 
+        I realized that the main page was losing the focus of what it was telling the users. 
+        I iterated on this several times and was able to streamline it. 
+        <img class="mirror-content2" src="matcha-img/Wireframes main.jpg" alt="Wireframes main page 3 iterations">
+        I first had two containers for private and group pages. 
+        However, I realized those two are almost the same except price and a few other information, so I combined them into just one section.
+        <img class="mirror-content2" src="matcha-img/Wireframes iteration class.jpg" alt="Wireframes class overview page 2 iterations">
 
 
 
         <p>Hi-Fidelity Responsive Design</p>
-        I created hi-fidelity designs based on the wireframes. I ended up changing a lot of the design from my
-        wireframes since some of them got visually crowded with too much images and text. I also realized that
-        the main page had too much information, which made the website lose its focus. I came up with a better
-        design after several iterations. It has a simpler UI, yet delivers strong messages to the users about
-        Japanese Tea Ceremony.<br><br>
+        I created hi-fidelity designs based on the wireframes. I decided to change the layout of the main page since it
+        looked text-heavy.
+        At first, I tried to leave all the text since I thought it's important for the users to know what matcha is. I
+        was able to make is simpler at the end, and it looks eye-catching visually compared to the first iteration.
+        <img class="mirror-content2" src="matcha-img/hi-fi iterations.jpg" alt="hi-fi UI main page iteration">
 
+        <img class="mirror-content2" src="matcha-img/hi-fi frames.jpg" alt="hi-fi UI">
     </div>
-
-    <div class=" content mirror-body">
-
-    Before
-    <img class="mirror-content" src="matcha-img/Before iteration.png" alt="Before, hi-fi frames">
-    After
-    <img class="mirror-content" src="matcha-img/HI-fi design.png" alt="After hi-fi frames"></div>
 
 
 
@@ -244,13 +248,14 @@
         <a class="link"
             href="https://www.figma.com/proto/y0gOSsfTJKw3IbhAWIWNIo/Matcha-hi-fi-design?page-id=0%3A1&node-id=143%3A348"
             target="_blank">View Prototype</a><br><br>
-        I conducted usability tests with 3 individuals aged 24-28 who like matcha. I also conducted
-        a usability test using Maze, which I tested with 10 individuals.
-        <br><br>
-        My objectives are:<br>
-        <li>Identify any frustrations/confusion users might have during each interaction.</li>
-        <li>Determine if the design inhibits users from preforming certain tasks.</li>
-        <li>Determine if the booking process is easy to complete.</li>
+        I conducted usability tests to identify any frustrations/confusion users might have during each interaction, and
+        if it inhibits users from performing certain tasks.
+        I recruited 3 individuals aged 24-28 who like matcha for the zoom usability test. I also conducted a usability
+        test using Maze, which I
+        tested with 10 individuals.
+
+
+
 
 
 
@@ -261,7 +266,7 @@
         I mainly got feedback about the tea ceremony classes and booking process, so I re-iterated on it.
         I searched for a lot of inspiration so that my design can deliver a better user experience.
 
-        <img class="mirror-content" src="matcha-img/Matcha Affinity Map.png" alt="Affinity Map">
+        <img class="mirror-content2" src="matcha-img/Matcha Affinity Map.png" alt="Affinity Map">
 
 
         <p>Priority Revision</p>
@@ -270,9 +275,35 @@
         <br>
 
 
+        <div>
 
+            <div class="mirror-content">I made the 'shop' text more visible than other text in the navigation bar.</div>
+            <img class="mirror-content2" src="matcha-img/Priority revision nav bar.jpg"
+                alt="Revisions I made based on the user test, nav bar">
+        </div>
 
-        <img class="mirror-content" src="matcha-img/Mock up matcha.jpg" alt="Revisions I made based on the user test">
+        <div>
+            <div class="mirror-content">I removed the description text and included 'What is matcha?' text so that
+                whoever
+                is interested can click and read more.
+                I used icons to differentiate group and private classes. The text is simple and short, yet it has all
+                the
+                information about the classes that are different from each other.</div>
+            <img class="mirror-content2" src="matcha-img/Priority revision class.jpg"
+                alt="Revisions I made based on the user test, class overview page">
+        </div>
+
+        <div>
+
+            <div class="mirror-content">
+                I made a container for the booking summary and removed unnecessary text for more simplicity.
+                For the starter kit, I included a photo of the starter kit so the users can visualize what they are
+                ordering.
+            </div>
+            <img class="mirror-content2" src="matcha-img/Priority revision checkout.jpg"
+                alt="Revisions I made based on the user test, check out">
+        </div>
+
 
     </div>
 
@@ -285,19 +316,10 @@
         </div>
     </div>
 
-    <div class="content mirror-body">
-        Since matcha is something I'm very familiar with, I thought this project would be easy to tackle.
-        However, it turned out to be tough since I was biased, and I had to empathize with people who
-        have no idea about matcha and tea ceremonies. I think I empathized with users in the wrong way at first since I
-        treated them like they know absolutely nothing about matcha.
-        Matcha is becoming more popular, so some people have an understanding of what matcha is.
-        My idea at first was to promote educational articles in addition to my main focuses. As a result, the main page
-        became cluttered and lost its main focus.
-        I'm glad I was able to notice that after talking with my mentor and my group. I was able to create a cleaner and
-        better UX website at last.
-
-
-
+<div class="content mirror-body">
+        <li>Assumptions could be correct or very wrong–it's important to make sure wether it's correct or not through research.</li>
+        <li>Having visuals, such as icons and images, make a big difference when the users navigate through the website. It also helps the users expect what they are without reading the text.</li>
+        <li>Having a lot of information doesn't always mean it's helping the users–it could result in making the users confused.</li>
     </div>
 
 
