--- a/Mirror.html
+++ b/Mirror.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script src="https://kit.fontawesome.com/12c68f3a6c.js" crossorigin="anonymous" defer></script>
+
 
     <link href="styles.css" rel="stylesheet">
 
@@ -39,17 +39,17 @@
 
     <div class="hero-mirror">
 
-        <div class="mirror-content">
-            <svg width="177" height="64" viewBox="0 0 97 35" fill="none" xmlns="http://www.w3.org/2000/svg"
-                class="work-logo">
-                <path d="M16 8H2V22" stroke="#4C4949" stroke-width="3" />
-                <path d="M95 19V33C83.1145 33 92.8855 33 81 33" stroke="#4C4949" stroke-width="3" />
-                <path
-                    d="M15.704 14.984H18.296V16.976C18.648 16.224 19.16 15.656 19.832 15.272C20.52 14.888 21.304 14.696 22.184 14.696C24.152 14.712 25.36 15.392 25.808 16.736C26.16 16.112 26.688 15.616 27.392 15.248C28.096 14.88 28.84 14.696 29.624 14.696C30.776 14.696 31.648 14.92 32.24 15.368C32.832 15.8 33.224 16.424 33.416 17.24C33.624 18.04 33.728 19.12 33.728 20.48V26H31.112V20.456C31.112 19.16 30.976 18.232 30.704 17.672C30.448 17.112 29.944 16.832 29.192 16.832C28.184 16.832 27.416 17.176 26.888 17.864C26.376 18.536 26.12 19.424 26.12 20.528V26H23.528V20.072C23.528 19.224 23.496 18.592 23.432 18.176C23.368 17.76 23.192 17.432 22.904 17.192C22.616 16.952 22.152 16.832 21.512 16.832C20.952 16.832 20.424 17 19.928 17.336C19.448 17.672 19.056 18.128 18.752 18.704C18.464 19.264 18.32 19.872 18.32 20.528V26H15.704V14.984ZM37.2241 14.984H39.9121V26H37.2241V14.984ZM38.5441 12.92C38.0481 12.92 37.6321 12.752 37.2961 12.416C36.9601 12.08 36.7921 11.664 36.7921 11.168C36.7921 10.72 36.9601 10.336 37.2961 10.016C37.6321 9.696 38.0481 9.536 38.5441 9.536C39.0241 9.536 39.4321 9.696 39.7681 10.016C40.1041 10.336 40.2721 10.72 40.2721 11.168C40.2721 11.664 40.1041 12.08 39.7681 12.416C39.4481 12.752 39.0401 12.92 38.5441 12.92ZM43.4289 14.984H46.0209V17.144C46.2769 16.408 46.6929 15.816 47.2689 15.368C47.8449 14.92 48.5009 14.696 49.2369 14.696C49.7489 14.696 50.1009 14.744 50.2929 14.84L49.9329 17.456C49.7889 17.36 49.4769 17.312 48.9969 17.312C48.2449 17.312 47.5569 17.552 46.9329 18.032C46.3249 18.512 46.0209 19.28 46.0209 20.336V26H43.4289V14.984ZM52.0539 14.984H54.6459V17.144C54.9019 16.408 55.3179 15.816 55.8939 15.368C56.4699 14.92 57.1259 14.696 57.8619 14.696C58.3739 14.696 58.7259 14.744 58.9179 14.84L58.5579 17.456C58.4139 17.36 58.1019 17.312 57.6219 17.312C56.8699 17.312 56.1819 17.552 55.5579 18.032C54.9499 18.512 54.6459 19.28 54.6459 20.336V26H52.0539V14.984ZM65.8869 26.24C64.7509 26.24 63.7429 25.984 62.8629 25.472C61.9829 24.96 61.3029 24.264 60.8229 23.384C60.3429 22.504 60.1029 21.528 60.1029 20.456C60.1029 19.4 60.3349 18.432 60.7989 17.552C61.2789 16.672 61.9589 15.976 62.8389 15.464C63.7189 14.952 64.7349 14.696 65.8869 14.696C67.0389 14.696 68.0469 14.952 68.9109 15.464C69.7909 15.976 70.4629 16.672 70.9269 17.552C71.4069 18.432 71.6469 19.4 71.6469 20.456C71.6469 21.528 71.4069 22.504 70.9269 23.384C70.4469 24.264 69.7669 24.96 68.8869 25.472C68.0229 25.984 67.0229 26.24 65.8869 26.24ZM65.9589 24.128C66.8869 24.128 67.6149 23.784 68.1429 23.096C68.6869 22.408 68.9589 21.544 68.9589 20.504C68.9589 19.464 68.6709 18.592 68.0949 17.888C67.5189 17.168 66.7589 16.808 65.8149 16.808C64.9029 16.808 64.1669 17.16 63.6069 17.864C63.0629 18.568 62.7909 19.448 62.7909 20.504C62.7909 21.528 63.0869 22.392 63.6789 23.096C64.2709 23.784 65.0309 24.128 65.9589 24.128ZM74.3429 14.984H76.9349V17.144C77.1909 16.408 77.6069 15.816 78.1829 15.368C78.7589 14.92 79.4149 14.696 80.1509 14.696C80.6629 14.696 81.0149 14.744 81.2069 14.84L80.8469 17.456C80.7029 17.36 80.3909 17.312 79.9109 17.312C79.1589 17.312 78.4709 17.552 77.8469 18.032C77.2389 18.512 76.9349 19.28 76.9349 20.336V26H74.3429V14.984Z"
-                    fill="#4C4949" />
-            </svg>
-            <img class="mirror-image" src="img/safari.jpg" alt="Mirror e-commerce website">
-        </div>
+
+        <svg width="177" height="64" viewBox="0 0 97 35" fill="none" xmlns="http://www.w3.org/2000/svg"
+            class="work-logo">
+            <path d="M16 8H2V22" stroke="#4C4949" stroke-width="3" />
+            <path d="M95 19V33C83.1145 33 92.8855 33 81 33" stroke="#4C4949" stroke-width="3" />
+            <path
+                d="M15.704 14.984H18.296V16.976C18.648 16.224 19.16 15.656 19.832 15.272C20.52 14.888 21.304 14.696 22.184 14.696C24.152 14.712 25.36 15.392 25.808 16.736C26.16 16.112 26.688 15.616 27.392 15.248C28.096 14.88 28.84 14.696 29.624 14.696C30.776 14.696 31.648 14.92 32.24 15.368C32.832 15.8 33.224 16.424 33.416 17.24C33.624 18.04 33.728 19.12 33.728 20.48V26H31.112V20.456C31.112 19.16 30.976 18.232 30.704 17.672C30.448 17.112 29.944 16.832 29.192 16.832C28.184 16.832 27.416 17.176 26.888 17.864C26.376 18.536 26.12 19.424 26.12 20.528V26H23.528V20.072C23.528 19.224 23.496 18.592 23.432 18.176C23.368 17.76 23.192 17.432 22.904 17.192C22.616 16.952 22.152 16.832 21.512 16.832C20.952 16.832 20.424 17 19.928 17.336C19.448 17.672 19.056 18.128 18.752 18.704C18.464 19.264 18.32 19.872 18.32 20.528V26H15.704V14.984ZM37.2241 14.984H39.9121V26H37.2241V14.984ZM38.5441 12.92C38.0481 12.92 37.6321 12.752 37.2961 12.416C36.9601 12.08 36.7921 11.664 36.7921 11.168C36.7921 10.72 36.9601 10.336 37.2961 10.016C37.6321 9.696 38.0481 9.536 38.5441 9.536C39.0241 9.536 39.4321 9.696 39.7681 10.016C40.1041 10.336 40.2721 10.72 40.2721 11.168C40.2721 11.664 40.1041 12.08 39.7681 12.416C39.4481 12.752 39.0401 12.92 38.5441 12.92ZM43.4289 14.984H46.0209V17.144C46.2769 16.408 46.6929 15.816 47.2689 15.368C47.8449 14.92 48.5009 14.696 49.2369 14.696C49.7489 14.696 50.1009 14.744 50.2929 14.84L49.9329 17.456C49.7889 17.36 49.4769 17.312 48.9969 17.312C48.2449 17.312 47.5569 17.552 46.9329 18.032C46.3249 18.512 46.0209 19.28 46.0209 20.336V26H43.4289V14.984ZM52.0539 14.984H54.6459V17.144C54.9019 16.408 55.3179 15.816 55.8939 15.368C56.4699 14.92 57.1259 14.696 57.8619 14.696C58.3739 14.696 58.7259 14.744 58.9179 14.84L58.5579 17.456C58.4139 17.36 58.1019 17.312 57.6219 17.312C56.8699 17.312 56.1819 17.552 55.5579 18.032C54.9499 18.512 54.6459 19.28 54.6459 20.336V26H52.0539V14.984ZM65.8869 26.24C64.7509 26.24 63.7429 25.984 62.8629 25.472C61.9829 24.96 61.3029 24.264 60.8229 23.384C60.3429 22.504 60.1029 21.528 60.1029 20.456C60.1029 19.4 60.3349 18.432 60.7989 17.552C61.2789 16.672 61.9589 15.976 62.8389 15.464C63.7189 14.952 64.7349 14.696 65.8869 14.696C67.0389 14.696 68.0469 14.952 68.9109 15.464C69.7909 15.976 70.4629 16.672 70.9269 17.552C71.4069 18.432 71.6469 19.4 71.6469 20.456C71.6469 21.528 71.4069 22.504 70.9269 23.384C70.4469 24.264 69.7669 24.96 68.8869 25.472C68.0229 25.984 67.0229 26.24 65.8869 26.24ZM65.9589 24.128C66.8869 24.128 67.6149 23.784 68.1429 23.096C68.6869 22.408 68.9589 21.544 68.9589 20.504C68.9589 19.464 68.6709 18.592 68.0949 17.888C67.5189 17.168 66.7589 16.808 65.8149 16.808C64.9029 16.808 64.1669 17.16 63.6069 17.864C63.0629 18.568 62.7909 19.448 62.7909 20.504C62.7909 21.528 63.0869 22.392 63.6789 23.096C64.2709 23.784 65.0309 24.128 65.9589 24.128ZM74.3429 14.984H76.9349V17.144C77.1909 16.408 77.6069 15.816 78.1829 15.368C78.7589 14.92 79.4149 14.696 80.1509 14.696C80.6629 14.696 81.0149 14.744 81.2069 14.84L80.8469 17.456C80.7029 17.36 80.3909 17.312 79.9109 17.312C79.1589 17.312 78.4709 17.552 77.8469 18.032C77.2389 18.512 76.9349 19.28 76.9349 20.336V26H74.3429V14.984Z"
+                fill="#4C4949" />
+        </svg>
+        <img class="mirror-image" src="img/safari.jpg" alt="Mirror e-commerce website">
+
 
 
     </div>
@@ -109,7 +109,7 @@
         It mainly helped me to understand how each business establishes its brand identity and what is focuses on.
 
 
-        <img class="mirror-content" src="img/Competitive analysis.jpg" alt="Competitive analysis">
+        <img class="mirror-content2" src="img/Competitive analysis.jpg" alt="Competitive analysis">
 
 
 
@@ -123,7 +123,7 @@
         when shopping online.
         I learned that the majority of participants prefer in-store shopping to see the products and sizes
         in-person.
-        <img class="mirror-content" src="img/Researchfindings.jpg" alt="Competitive analysis">
+        <img class="mirror-content2" src="img/Researchfindings.jpg" alt="Competitive analysis">
 
 
     </div>
@@ -150,7 +150,7 @@
         Since the majority of participants mentioned that they prefer in-store shopping, I decided to design
         the website so that they can enjoy shopping as much as they do in-store.
 
-        <img class="mirror-content" src="img/Persona.jpg" alt="Persona, Tiffany Song">
+        <img class="mirror-content2" src="img/Persona.jpg" alt="Persona, Tiffany Song">
 
 
 
@@ -162,7 +162,7 @@
         each card.
         From the findings, I was able to make a site map of how information should be categorized within the
         website.
-        <img class="mirror-content" src="img/Sitemap.jpg" alt="Site Map">
+        <img class="mirror-content2" src="img/Sitemap.jpg" alt="Site Map">
 
         <p>User Flow</p>
 
@@ -172,7 +172,7 @@
 
 
 
-        <img class="mirror-content" src="img/User Flow.jpg" alt="User FLow">
+        <img class="mirror-content2" src="img/User Flow.jpg" alt="User FLow">
     </div>
 
 
@@ -189,16 +189,22 @@
     <div class="content mirror-body">
 
         <p>Wire Flows</p>
-        I created lo-fi wireframes to visualize how the website will look. It helped me to focus on user flows rather than the UI.
-        <img class="mirror-content" src="img/Wireframes.jpg" alt="Mirror, lo-fi wireframes">
+        I created lo-fi wireframes to visualize the website. It helped me to focus on user flows rather
+        than the UI. I made sure that users can easily find the shipping/returns policy since it is the main concern for my persona.
+        I also kept the drop-down menu simple so that users can easily navigate the site. 
+        I learned from my user interviews that a lot of people use categories to find what they're looking for.
+
+        <img class="mirror-content2" src="img/Wireframes.jpg" alt="Mirror, lo-fi wireframes">
 
 
         <p>Hi-Fi Responsive Design</p>
         I made hi-fi UI designs for both desktop and mobile based on the wireframes and color palette.
         I also went back to check if the design was successful in meeting the needs of my persona.
+        I wanted to make the flow really easy since I thought the large catalog might overwhelm users, which some of the participants mentioned in the user interviews. 
+        At the result, I was able to use the colors wisely to make important pieces prominent and put everything where users expect them to be.
 
 
-        <img class="mirror-content" src="img/hi-fi design2.jpg" alt="Responsive wireframes">
+        <img class="mirror-content2" src="img/hi-fi design2.jpg" alt="Responsive wireframes">
 
 
     </div>
@@ -230,21 +236,22 @@
         I synthesized the user test results and created an Affinity Map.
         It helped me to understand the successes, frustrations, and necessary improvements to deliver better
         experiences.
-        <img class="mirror-content" src="img/Affinity Map.jpg" alt="Affinity Map">
+        <img class="mirror-content2" src="img/Affinity Map.jpg" alt="Affinity Map">
 
 
         <p>Priority Revision</p>
         <a class="link"
             href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=60%3A3628&viewport=543%2C566%2C0.036799125373363495&scaling=contain"
             target="_blank">View Prototype</a><br><br>
-        I made revisions on the design based on the feedback I received from participants in my usability test to make the website more intuitive.
+        I made revisions on the design based on the feedback I received from participants in my usability test to make
+        the website more intuitive.
         <br>
 
         <li>I made the search box bigger since it looked cramped and made users not want click on it.</li>
         <li>I moved "Spring Collection" into the Hero image so that it doesn't overlap with "New Arrivals".
         </li>
 
-        <img class="mirror-content" src="img/Mockup.jpg" alt="Revisions I made based on the user test">
+        <img class="mirror-content2" src="img/Mockup.jpg" alt="Revisions I made based on the user test">
 
     </div>
 
@@ -258,8 +265,10 @@
     </div>
 
     <div class="content mirror-body">
-        <li>Users care about small details both consciously and unconsciously. The cramped search box, magnifying glass icon, and even colors can distract users from what's important.</li>
-        <li>A clean and simple interface makes users think everything will go smoothly (though it’s important to keep the interface intuitive).</li>
+        <li>Users care about small details both consciously and unconsciously. The cramped search box, magnifying glass
+            icon, and even colors can distract users from what's important.</li>
+        <li>A clean and simple interface makes users think everything will go smoothly (though it’s important to keep
+            the interface intuitive).</li>
         <li>It’s important to empathize with users. Each bit of research informed the final design.</li>
     </div>
 
