Mirror case study page
– Updated images

--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -61,8 +61,9 @@
 
             <div>
                 <li>Design a messaging feature that enables parents to communicate with other parents in the app.</li>
-                <li>Discover what privacy concerns parents have and design the app accordingly so t hat it is safe to use.
-                    </li>
+                <li>Discover what privacy concerns parents have and design the app accordingly so t hat it is safe to
+                    use.
+                </li>
             </div>
 
             <div class="objectives">
@@ -78,9 +79,10 @@
             </div>
 
             <p>Challenges</p>
-            <li>Some parents are open about sharing their child's information, yet other parents are very concerned about their child's identity. 
-                </li>
-            <li>It's hard to get to know other parents and possibly have a play date. </li>
+            <li>Not all parents are open to share their and their child's information. How might we provide both sides
+                options to show/hide their information? </li>
+            <li>Parents have a hard time getting to know other parents in-person. It's also hard to know who is who's
+                parents.</li>
 
 
         </div>
@@ -98,43 +100,20 @@
     </div>
 
     <div class="content mirror-body">
-
-        <p>Competitive Analysis</p>
-
-        I did research to understand the matcha market as well as to learn how people perceive
-        matcha.
-        I learned that a) matcha consumption is increasing as a superfood and b) the majority of people associate
-        matcha with ice cream, desserts, or lattes.
-        I also picked competitors who do tea ceremony lessons either online or in-person to see how they set up their
-        booking process.
-
-
-        <img class="mirror-content2" src="matcha-img/Competitive Analysis.jpg" alt="Competitive Analysis">
-
-
-
-
-
-        <p>Survey</p>
-
-        I conducted a survey to get overall impressions about matcha and Japanese Tea Ceremony.
-        As I learned how people perceive matcha in competitive analysis, the majority of participants associated it with
-        forms of desserts and drinks.
-        For Japanese Tea Ceremony, I made an assumption that people associate it with strict manners and
-        a sophisticated atmosphere, so I wanted to get quantitative results from the survey.
-        My assumption was fairly correct, while a few people said that it would be a relaxing and peaceful experience.
-
-
-        <img class="mirror-content2" src="matcha-img/Survey.jpg" alt="Survey 2 charts">
-
+        I decided to do only user interviews since I couldn’t check other competitors (I had to be a parent or staff to
+        be able to use other similar apps). I was initially planning on conducting a survey, but I ended up not doing it
+        since all the questions I had were better to ask in user interviews for qualitative data. Also, the problems I
+        was trying to solve needs to be answered in-depth. ???
 
         <p>1:1 User Interviews</p>
-        I conducted user interviews with 6 individuals who like matcha. I learned that the majority of people would
-        seek out Japanese Tea Ceremony as a cultural experience when they were in Japan or if they had the chance.
-        However, a few participants (those who have lived in Japan before) said they would like to learn about and
-        get better at it.
-        I decided to target those who would seek it out when they get the chance, since they represent the majority
-        of potential users in the US.<br><br>
+        For user interviews, I was able to gather a lot of useful and qualitative answers. I learned a lot of concerns
+        and needs of parents through user interviews.
+        All of the participants were not very concerned about their privacy since their daycare is small. However, I can
+        see some parents will be concerned about their privacy, so I decided to have the options for parents to hide
+        their information in the app. Other than that, the majority of parents seemed that they want to get to know
+        other children and preants.
+
+        <br><br>
 
         Here are the major needs/pain points I got from the user interviews.
 
@@ -161,14 +140,10 @@
 
 
         <p>Persona</p>
-
-        To empathize with the users and remember what their needs are, I created a persona that
-        represents a core user. At first, I was thinking that my target users are people who appreciate
-        attending Japanese Tea Ceremony and drinking matcha as it is. However, I learned through my research
-        that liking matcha doesn’t mean they would attend a class to get better at making matcha, but to learn
-        about a
-        new culture and new things.
-        <img class="mirror-content2" src="matcha-img/Persona.jpg" alt="Persona, Jessica Wong">
+        Through my research, I was able to learn a lot about the users, so I decided to summarize and make it into one
+        persona to remember throughout the process. It was really important for me to carefully check the interview
+        summary because I'm not a mom, so it was a little bit hard to emphasize and understand them.
+        <img class="mirror-content2" src="matcha-img/Persona.jpg" alt="Persona, Anna Taylor">
 
 
         <p>User Flow</p>
@@ -270,12 +245,15 @@
         I mainly got feedback about the tea ceremony classes and booking process, so I re-iterated on it.
         I searched for a lot of inspiration so that my design can deliver a better user experience.
 
-        <img class="mirror-content2" src="matcha-img/Matcha Affinity Map.png" alt="Affinity Map">
+        <img class="mirror-content2" src="matcha-img/Affinity Map.jpg" alt="Affinity Map">
 
 
         <p>Priority Revision</p>
-        After analyzing what is making users frustrated or confused, I made revisions based on the
-        solutions/improvements on affinity map.
+        I wanted to keep the original design as much as possible since my main focus is to add a feature. I wasn’t sure
+        how I can make the topic more obvious so that users would know they have to choose a topic. I referred back to
+        the original design and realized it looks more obvious–they use the purple for text and they have other text in
+        more subtle colors and they also have less text. I decided to change the color and remove the “Topic” so that it
+        looks cleaner, and it works better capturing eyes from other things and make the text more prominent.
         <br>
 
 
