--- a/Mirror.html
+++ b/Mirror.html
@@ -123,7 +123,7 @@
         when shopping online.
         I learned that the majority of participants prefer in-store shopping to see the products and sizes
         in-person.
-        <img class="mirror-content2" src="img/Researchfindings.jpg" alt="Competitive analysis">
+        <img class="mirror-content2" src="img/Interview summary.jpg" alt="Interview summary for Mirror">
 
 
     </div>
@@ -197,14 +197,15 @@
         <img class="mirror-content2" src="img/Wireframes.jpg" alt="Mirror, lo-fi wireframes">
 
 
-        <p>Hi-Fi Responsive Design</p>
+        <div><p>Hi-Fi Responsive Design</p>
         I made hi-fi UI designs for both desktop and mobile based on the wireframes and color palette.
         I also went back to check if the design was successful in meeting the needs of my persona.
         I wanted to make the flow really easy since I thought the large catalog might overwhelm users, which some of the participants mentioned in the user interviews. 
-        At the result, I was able to use the colors wisely to make important pieces prominent and put everything where users expect them to be.
+        At the result, I was able to use the colors wisely to make important pieces prominent and put everything where users expect them to be.</div>
 
 
-        <img class="mirror-content2" src="img/hi-fi design2.jpg" alt="Responsive wireframes">
+        <img class="mirror-main-screen" src="img/Homepage.jpg" alt="Hi-fidelity responsive screens">
+        <img class="mirror-content2" src="img/Other screen.jpg" alt="Hi-fidelity other screens">
 
 
     </div>
