--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -266,7 +266,7 @@
         I mainly got feedback about the tea ceremony classes and booking process, so I re-iterated on it.
         I searched for a lot of inspiration so that my design can deliver a better user experience.
 
-        <img class="mirror-content2" src="matcha-img/Matcha Affinity Map.png" alt="Affinity Map">
+        <img class="mirror-content2" src="matcha-img/Affinity Map.jpg" alt="Affinity Map">
 
 
         <p>Priority Revision</p>
