--- a/Mirror.html
+++ b/Mirror.html
@@ -252,7 +252,7 @@
         <li>I moved "Spring Collection" into the Hero image so that it doesn't overlap with "New Arrivals".
         </li>
 
-        <img class="mirror-content2" src="img/Mockup.jpg" alt="Revisions I made based on the user test">
+        <img class="mirror-content2" src="img/Mockup.png" alt="Revisions I made based on the user test">
 
     </div>
 
