--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <div class="nav">
-        <div class="content nav-content">
+        <div class="nav-content">
 
             <a class="logo" href="/"><svg width="113" height="37" viewBox="0 0 113 37" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -37,7 +37,7 @@
     </div>
 
 
-    <div class="about content">
+    <div class="about content-home">
 
         <div>
             <h1>
@@ -65,7 +65,7 @@
 
     <div class="work">
 
-        <div class="content">
+        <div class="content-home">
             <h1>Work</h1>
 
 
