--- a/Mirror.html
+++ b/Mirror.html
@@ -278,7 +278,7 @@
 
 
 
-    <div class="content">
+    <div class="content-home">
         <div class="socialmedia">
 
             <a class="icon" href="https://www.linkedin.com/in/kotomitcogdill/"><svg viewBox="0 0 40 40"
