--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-    <script src="https://kit.fontawesome.com/12c68f3a6c.js" crossorigin="anonymous" defer></script>
-
     <link href="styles.css" rel="stylesheet">
 
 
@@ -310,7 +308,7 @@
 
 
 
-    <div class="content">
+    <div class="content-home">
         <div class="socialmedia">
 
             <a class="icon" href="https://www.linkedin.com/in/kotomitcogdill/"><svg viewBox="0 0 40 40"
