--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <div class="footer-green">
 
-        <div class="content">
+        <div class="content-home">
             <div class="socialmedia">
 
                 <a class="icon" href="https://www.linkedin.com/in/kotomitcogdill/"><svg viewBox="0 0 40 40"
