--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -37,9 +37,18 @@
 
     <div class="hero-all-about-matcha">
 
+        <div class="matcha-hero">
+            <div>
+                <h1>All About Matcha</h1>
+                <h3>Delivering the Japanese Tea Ceremony experience to your home.</h3>
+            </div>
 
-        <h1 class="work-logo">All About Matcha</h1>
-        <img class="mirror-image" src="matcha-img/Matcha mock up.png" alt="All about matcha responsive website mock up screens">
+
+            <img class="matcha-hero-image" src="matcha-img/Matcha mock up.png"
+                alt="All about matcha responsive website mock up screens">
+        </div>
+
+
 
 
 
@@ -202,30 +211,39 @@
         about them.
 
         <a href=#img-wireframes class="lightbox-link">
-            <img class="mirror-content2" src="matcha-img/Wireflows.png" alt="Mirror, low-fi wireframes">
+            <img class="mirror-content2" src="matcha-img/Wireflows.jpg" alt="Mirror, low-fi wireframes">
         </a>
 
         <a href="#!" class="lightbox" id="img-wireframes">
-            <span style="background-image: url('matcha-img/Wireflows.png')"></span>
+            <span style="background-image: url('matcha-img/Wireflows.jpg')"></span>
         </a>
-        I had a lot of different pieces of information at first that made the main page look cluttered. 
-        I realized that the main page was losing the focus of what it was telling the users. 
-        I iterated on this several times and was able to streamline it. 
+        I had a lot of different pieces of information at first that made the main page look cluttered.
+        I realized that the main page was losing the focus of what it was telling the users.
+        I iterated on this several times and was able to streamline it.
+
         <img class="mirror-content2" src="matcha-img/Wireframes main.jpg" alt="Wireframes main page 3 iterations">
-        I first had two containers for private and group pages. 
-        However, I realized those two are almost the same except price and a few other information, so I combined them into just one section.
-        <img class="mirror-content2" src="matcha-img/Wireframes iteration class.jpg" alt="Wireframes class overview page 2 iterations">
+        I first had two containers for private and group pages.
+        However, I realized those two are almost the same except price and a few other information, so I combined them
+        into just one section.
+        <img class="mirror-content2" src="matcha-img/Wireframes iteration class.jpg"
+            alt="Wireframes class overview page 2 iterations">
 
 
 
         <p>Hi-Fidelity Responsive Design</p>
         I created hi-fidelity designs based on the wireframes. I decided to change the layout of the main page since it
         looked text-heavy.
-        At first, I tried to leave all the text since I thought it's important for the users to know what matcha is. I
-        was able to make is simpler at the end, and it looks eye-catching visually compared to the first iteration.
-        <img class="mirror-content2" src="matcha-img/hi-fi iterations.jpg" alt="hi-fi UI main page iteration">
+        At first, I tried to leave all the text since I thought it's important for the users to know what matcha is, but
+        I realized people wouldn't care and just skip the reading part if they are not interested. At the end, I made
+        the text much shorter and gave the users options to read more if they are interested.
+        I also tried hard not to make the website look too sophisticated since Japanese Tea Ceremony itself is already
+        too sophisticated to scare people away sometimes. To achieve that, I used friendly and soft colors rather than
+        black, which a lot of matcha businesses do. Yet the images leave the hint of sophistication which shows the
+        beauty of Japanese Tea Ceremony.
 
-        <img class="mirror-content2" src="matcha-img/hi-fi frames.jpg" alt="hi-fi UI">
+
+        <img class="mirror-content2" src="matcha-img/Responsive homepage.jpg" alt="hi-fi responsive screens">
+        <img class="mirror-content2" src="matcha-img/Hi-fi other pages.jpg" alt="hi-fi other screens">
     </div>
 
 
@@ -316,10 +334,13 @@
         </div>
     </div>
 
-<div class="content mirror-body">
-        <li>Assumptions could be correct or very wrong–it's important to make sure wether it's correct or not through research.</li>
-        <li>Having visuals, such as icons and images, make a big difference when the users navigate through the website. It also helps the users expect what they are without reading the text.</li>
-        <li>Having a lot of information doesn't always mean it's helping the users–it could result in making the users confused.</li>
+    <div class="content mirror-body">
+        <li>Assumptions could be correct or very wrong–it's important to make sure wether it's correct or not through
+            research.</li>
+        <li>Having visuals, such as icons and images, make a big difference when the users navigate through the website.
+            It also helps the users expect what they are without reading the text.</li>
+        <li>Having a lot of information doesn't always mean it's helping the users–it could result in making the users
+            confused.</li>
     </div>
 
 
